fix: font
not showing correctly

--- a/challenge010b/assets/styles/app.css
+++ b/challenge010b/assets/styles/app.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'Android';
-    src: url(/assets/fonts/idroid.otf) format('opentype');
+    src: url(../fonts/idroid.otf) format('opentype');
     font-weight: normal;
 }
 
